[SWAGGER] Finished adding swagger documentation for all endpoints
