# internal/handlers/club.go
@@ -8,6 +8,13 @@ import (
 	"github.com/go-chi/render"
 )
 
+// swagger:route POST /club/join club newClubMember
+// Creates a new club member entry for the user given a JoinClubRequest and response returns the ClubMember EntryID
+// responses:
+//	200: ClubMember EntryID
+//	400: Error
+
+//Creates a new club member entry for the user given a JoinClubRequest
 func (bh *BookClubHandler) CreateUserClubMember(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
@@ -30,6 +37,13 @@ func (bh *BookClubHandler) CreateUserClubMember(w http.ResponseWriter, r *http.R
 	render.JSON(w, r, confirmationID)
 }
 
+// swagger:route GET /club/id club getClubData
+// Returns data for a club entry given a ClubDataRequest
+// responses:
+//	200: Club
+//	400: Error
+
+//Gets data for a club entry given a ClubDataRequest
 func (bh *BookClubHandler) GetClubData(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
@@ -42,31 +56,25 @@ func (bh *BookClubHandler) GetClubData(w http.ResponseWriter, r *http.Request) {
 	render.JSON(w, r, bh.service.GetClubData(clubRequest.EntryID))
 }
 
+// swagger:route GET /club club listClubs
+// Returns a list of clubs
+// responses:
+//	200: Clubs
+//	400: Error
+
+//Returns a list of clubs
 func (bh *BookClubHandler) GetClubs(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	render.JSON(w, r, bh.service.GetClubs())
 }
 
-func (bh *BookClubHandler) GetUserClubs(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
+// swagger:route POST /club/create club createClub
+// Creates a new club entry for the user given a CreateClubRequest and response returns the Club EntryID
+// responses:
+//	200: Club EntryID
+//	400: Error
 
-	var userClubsRequest models.UserClubsRequest
-
-	if err := json.NewDecoder(r.Body).Decode(&userClubsRequest); err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		render.JSON(w, r, err.Error())
-	}
-	clubs, err := bh.service.GetUserClubs(userClubsRequest.UserID)
-
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		render.JSON(w, r, err.Error())
-		return
-	}
-
-	render.JSON(w, r, clubs)
-}
-
+//Creates a new club entry for the user given a CreateClubRequest
 func (bh *BookClubHandler) CreateClub(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
